<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details_activity"
    tools:context=".ui.neighbour_list.DetailsNeighbourActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
...
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_star_border_white_24dp"
        android:tint="#FFC107"
        android:backgroundTint="#F5F5F5"
        app:layout_anchor="@id/details_avatar"
        app:layout_anchorGravity="bottom|right|end"
        android:id="@+id/fav" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
...
